@@ -19,7 +19,9 @@ t/35-git_ignore.t
 t/40-remove_unwanted_files.t
 t/45-init.t
 t/50-move_distribution_files.t
-t/55-full_run_template_comparison.t
+t/55-changes.t
+t/60-changes_date.t
+t/99-full_run_template_comparison.t
 t/data/module_template/.github/workflows/github_ci_default.yml
 t/data/module_template/Changes
 t/data/module_template/lib/Test/Module.pm
@@ -31,6 +33,8 @@ t/data/module_template/t/manifest.t
 t/data/module_template/t/pod-coverage.t
 t/data/module_template/t/pod.t
 t/data/orig/Bad.pm
+t/data/orig/Changes
+t/data/orig/Changes-release
 t/data/orig/github_ci_default.yml
 t/data/orig/Makefile.PL
 t/data/orig/MANIFEST.SKIP
