@@ -1,0 +1,4 @@
+Revision history for Test-Module
+
+0.01    XXXX-YY-ZZ
+    - Auto generated distribution with Dist::Mgr
